# flake-checker

./: .editorconfig  .gitignore  Cargo.toml  README.md  allowed-refs.json  branches.json  crane.nix  flake.nix  get-allowed-refs.sh  ref-statuses.json  rust-toolchain.toml  summary.md
.cargo/: config.toml
.github/workflows/: allowed-refs.yaml  build.yaml  build.yml  ci.yaml  ci.yml  flakehub-publish-tagged.yaml  flakehub-publish-tagged.yml  ref-statuses.yaml  release-branches.yaml  release-branches.yml  release-prs.yaml  release-prs.yml  release-tags.yaml  release-tags.yml  udpate-flake-lock.yaml  udpate-flake-lock.yml  update-flake-lock.yaml  upload_s3.sh
parse-flake-lock/: Cargo.toml
parse-flake-lock/src/: lib.rs
scripts/: build-release-binaries.sh
src/: allowed_refs.rs  condition.rs  error.rs  flake.rs  issue.rs  lib.rs  main.rs  policy.json  ref_statuses.rs  summary.rs  supported_refs.rs  telemetry.rs
src/explainers/: outdated_deps.md  supported_refs.md  upstream_nixpkgs.md
src/templates/: clean.md  dirty.md  summary.cel.md.hbs  summary.cel.txt.hbs  summary.md  summary.standard.txt.hbs  summary.txt  summary_md.hbs  summary_txt.hbs
templates/: README.md.handlebars  README.md.tpl
tests/: cel-condition.cel  cel-condition.txt
