[package]
name = "flake-checker"
version = "0.1.19"
edition = "2021"

[workspace]
members = [".", "parse-flake-lock"]

[dependencies]
cel-interpreter = { version = "0.7.1", default-features = false }
cel-parser = { version = "0.6.0", default-features = false }
chrono = { version = "0.4.25", default-features = false, features = ["clock"] }
clap = { version = "4.3.0", default-features = false, features = [
  "derive",
  "env",
  "std",
  "wrap_help",
] }
handlebars = { version = "4.3.7", default-features = false }
is_ci = "1.1.1"
once_cell = { version = "1.19.0", default-features = false }
parse-flake-lock = { path = "./parse-flake-lock" }
reqwest = { version = "0.11.18", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false, features = [
  "std",
] }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.40"

[features]
default = []
supported-refs = []
