[package]
name = "flake-checker"
version = "0.1.20"
edition = "2021"

[workspace]
members = [".", "parse-flake-lock"]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.100", default-features = false, features = [
  "std",
] }
thiserror = { version = "1.0.40", default-features = false }

[features]
default = []
allowed-refs = []

[dependencies]
chrono = { version = "0.4.25", default-features = false, features = ["clock"] }
clap = { version = "4.3.0", default-features = false, features = [
  "derive",
  "env",
  "std",
  "wrap_help",
] }
handlebars = { version = "4.3.7", default-features = false }
is_ci = "1.1.1"
once_cell = { version = "1.19.0", default-features = false }
parse-flake-lock = { path = "parse-flake-lock" }
reqwest = { version = "0.11.18", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls-native-roots",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10.6", default-features = false }
thiserror = { workspace = true }
