[package]
name = "flake-checker"
version = "0.2.7"
edition = "2021"

[workspace]
resolver = "2"
members = [".", "parse-flake-lock"]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.100", default-features = false, features = [
  "std",
] }
thiserror = { version = "1.0.40", default-features = false }

[dependencies]
cel-interpreter = { version = "0.7.1", default-features = false }
chrono = { version = "0.4.25", default-features = false, features = ["clock"] }
clap = { version = "4.3.0", default-features = false, features = [
  "derive",
  "env",
  "std",
  "wrap_help",
] }
detsys-ids-client = { version = "0.3.0", features = ["tracing-instrument"] }
handlebars = { version = "4.3.7", default-features = false }
parse-flake-lock = { path = "./parse-flake-lock" }
reqwest = { version = "0.11.18", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls-native-roots",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = []
ref-statuses = []
